# ds-super-crema

./: .gitignore  .gitmodules  CLAUDE.md  Handon_upload_automation.md  Handover_upload_automation.md  README.md  app copy.py  app.py  pyproject.toml  requirements.txt
modules/: auth_simple copy.py  auth_simple.py
modules/creative_performance_trend/: main.py
modules/upload_automation/: Document.md  HANDOFF.md  __init__.py  applovin.py  drive_import.py  facebook_ads.py  fb.py  ga.py  game_manager.py  generate_refresh_token.py  google_ads.py  main.py  mintegral.py  uni.py  unity_ads.py  upload_logger.py  vietnam.py
modules/upload_automation/application/: __init__.py  upload_validation.py
modules/upload_automation/config/: __init__.py
modules/upload_automation/network/: README.md  __init__.py  dto.py  http_client.py  retry_policies.py
modules/upload_automation/scripts/: __init__.py  generate_refresh_token.py
modules/upload_automation/service/: __init__.py
modules/upload_automation/service/applovin/: __init__.py  http_requests.py
modules/upload_automation/service/facebook/: __init__.py  graph_requests.py
modules/upload_automation/service/mintegral/: __init__.py  http_requests.py
modules/upload_automation/service/unity/: __init__.py  api_requests.py  constants.py
modules/upload_automation/session/: __init__.py  keys.py
modules/upload_automation/ui/: __init__.py  upload_tab.py
modules/upload_automation/utils/: __init__.py  devtools.py  drive_import.py  slack_executor.py  video_thumbnail.py
modules/visualization/: main.py
modules/visualization/Past/: main 1208.py  main-1206.py  main_1202.py
