[project]
name = "ds-super-crema"
version = "0.1.0"
description = ""
authors = [
    {name = "jaepark-supercent",email = "jaepark@supercent.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Frontend dependencies
    "streamlit>=1.28.0,<2.0.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "python-dotenv>=1.0.0",
    # Backend dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "openai-whisper>=20231117",
    "openai>=1.3.0",
    "google-cloud-translate>=3.12.1",
    "google-generativeai>=0.3.0",
    "elevenlabs>=0.2.26",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "aiofiles>=23.2.1",
    "numpy>=1.24.3",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.0",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
