[project]
name = "ds-super-crema"
version = "0.1.0"
description = "Super Crema - Creative Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.51.0",
    "pandas==2.3.3",
    "numpy<2.0.0",
    "db-dtypes==1.4.4",
    "requests",
    "plotly==6.5.0",
    "google-cloud-bigquery>=3.25.0",
    "google-api-python-client==2.100.0",
    "google-auth>=2.23.0,<3.0.0",
    "google-auth-oauthlib>=1.1.0,<2.0.0",
    "google-auth-httplib2==0.1.1",
    "opencv-python-headless",
    "facebook-business",
    "streamlit-cookies-controller",
    "extra-streamlit-components==0.1.60",
    "google-ads==29.2.0",
    "grpcio>=1.59.0,<2.0.0",
    "protobuf>=5.26.1,<7.0.0",
    "toml>=0.10.2",
]

[tool.uv]
package = false
